# BotheadStudios

./: .gitignore  LICENSE  README.md
greenfield-engine/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  JOURNAL.md  LICENSE-MIT  README.md
greenfield-engine/crates/engine/: Cargo.toml
greenfield-engine/data/: materials.json
greenfield-engine/docs/: 01-prior-art-existing-engines.md  02-oss-building-blocks.md  03-versioning.md  10-robustness-and-common-pitfalls.md  11-networking-architecture.md  13-scale-relative-simulation.md  15-representation-invariant.md  17-honest-appearance-and-observer-frame.md  19-lod-adaptive-damage.md  20-impact-thermodynamics.md  22-gpu-compute-particles.md  23-everything-is-matter-north-star.md  25-layered-planets-and-atmosphere.md  26-atmosphere-as-matter.md  28-missing-impact-physics.md  33-architecture-realignment.md  34-stage-4c-pickup.md  35-gpu-path-migration.md  39-planetary-scale-jit-particalization.md  43-worlds-as-data.md
greenfield-engine/scripts/: deploy.sh  dev-lan.sh  test.sh
greenfield-engine/shaders/: globe.wgsl  particle_step.wgsl  space.wgsl  sph_step.wgsl  world.wgsl
greenfield-engine/tools/bake-earth/: bake.py
greenfield-engine/web/: index.html  package-lock.json  package.json  twomoons.html  vite.config.ts
greenfield-engine/web/rig/: bug2_diag.mjs  bug_terrain.mjs  crater1.mjs  dig_hill.mjs  dissolve.mjs  final.mjs  floaters.mjs  frame_check.mjs  ghost.mjs  horizon.mjs  orbit_shots.mjs  orbit_watch.mjs  pretty_slider.mjs  seethrough.mjs  sph_impact.mjs  terra_depth.mjs  terra_globe.mjs  terra_ground.mjs  (+1 more)
(+236 files in other folders)
